# menhir-quickstart

./: README.md  dune-project  justfile  menhir-quickstart.opam
calculator/: dune  lexer.ml  lexer.mll  main.ml  test.ml  tests.t
calculator/calc/: calc.ml  dune  lexer.ml  ocamlLexer.mll  parser.mly
hello/: dune  hanzi.ml  hello.ml  test.ml
simpl/: README.md  dune  main.ml  test.ml
simpl/interp/: ast.ml  dune  interp.ml  lexer.ml  main.ml  olexer.mll  parser.mly
